Removed parts of developer stupidness